# python-etl-data-quality

./: 404.html  README.md  index.html  mkdocs.yml  my_duckdb.db  objects.inv  pyproject.toml  schema_crm.py
.github/workflows/: ci.yml
app/: etl.py  etl_infer_schema.py  read_duckdb.py  schema.py  schema_email.py
docs/: index.md
search/: search_index.json
sql/: create_table_products_bronze.sql  insert_into_products_bronze.sql
tests/: test_func_etl.py
